---
source: crates/pcb-zen/tests/input.rs
assertion_line: 229
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "TEST")
      (footprint "test_footprint:test_footprint")
      (libsource (lib "lib") (part "TEST") (description "unknown"))
      (sheetpath (names "test_comp") (tstamps "12cb098b-bab7-5f52-8c70-58c8f9863fe7"))
      (tstamps "12cb098b-bab7-5f52-8c70-58c8f9863fe7")
      (property (name "Reference") (value "U1"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"TEST\",\"qualifications\":[]}"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "TEST")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "in") (type "stereo"))
        (pin (num "2") (name "out") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "OUTPUT")
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
    (net (code "2") (name "sig_signal")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
  )
)
